--- a/about-us.html
+++ b/about-us.html
@@ -1,148 +1,146 @@
 <!DOCTYPE html>
-
 <html lang="en">
+
 <head>
-<meta name="description" content="Learn about Elementa Voyages, our passionate team, and our mission to inspire unforgettable travel experiences around the world.">
-<meta charset="utf-8">
-<meta content="width=device-width, initial-scale=1.0" name="viewport">
-<title>About Us | Elementa Voyagés</title>
-<!-- Link to about page stylesheet -->
-<link href="about.css" rel="stylesheet"/>
+  <meta name="description"
+    content="Learn about Elementa Voyages, our passionate team, and our mission to inspire unforgettable travel experiences around the world.">
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <title>About Us | Elementa Voyagés</title>
+  <!-- Link to about page stylesheet -->
+  <link href="about.css" rel="stylesheet">
 </head>
+
 <body>
-<!-- Top Header: Logo and navigation -->
-<header class="top-header">
-<div class="logo-container">
-<!-- Logo linking back to home page -->
-<a aria-label="Go to home page" href="index.html">
-<img alt="Elementa Voyagés Logo" height="height" src="Screenshot_2025-07-09_at_21.32.05-removebg-preview.webp" width="width"/>
-</a>
-</div>
-<nav class="nav-links">
-<a href="index.html">Home</a>
-<a href="test-explore.html">Explore</a>
-<a href="mailto:info@elementavoyages.com">Contact</a>
-</nav>
-</header>
-<!-- Main Content Area -->
-<main class="about-container">
-<!-- Intro Section: Who We Are -->
-<section aria-labelledby="intro-title" class="intro">
-<h2 id="intro-title">Who We Are</h2>
-<p>
-        Founded in 2019, Elementa Voyagés is more than a travel company — it’s a vision. 
-        We believe that each journey should be a work of art, blending luxury, culture, 
-        and discovery. From handpicked hotels to curated experiences, our mission is to 
+  <!-- Top Header: Logo and navigation -->
+  <header class="top-header">
+    <div class="logo-container">
+      <!-- Logo linking back to home page -->
+      <a aria-label="Go to home page" href="index.html">
+        <img alt="Elementa Voyagés Logo" src="Screenshot_2025-07-09_at_21.32.05-removebg-preview.webp">
+      </a>
+    </div>
+    <nav class="nav-links">
+      <a href="index.html">Home</a>
+      <a href="test-explore.html">Explore</a>
+      <a href="mailto:info@elementavoyages.com">Contact</a>
+    </nav>
+  </header>
+  <!-- Main Content Area -->
+  <main class="about-container">
+    <!-- Intro Section: Who We Are -->
+    <section aria-labelledby="intro-title" class="intro">
+      <h2 id="intro-title">Who We Are</h2>
+      <p>
+        Founded in 2019, Elementa Voyagés is more than a travel company — it’s a vision.
+        We believe that each journey should be a work of art, blending luxury, culture,
+        and discovery. From handpicked hotels to curated experiences, our mission is to
         transform travel into an unforgettable story.
       </p>
-</section>
-<!-- Story Section: Company Background -->
-<section aria-labelledby="story-title" class="story">
-<div class="story-text">
-<h2 id="story-title">Our Story</h2>
-<p>
-          The name <strong>Elementa</strong> comes from the idea of the four elements: 
-          Earth, Water, Air, and Fire. These elements shape not only our planet, but 
-          also the journeys we take. Inspired by these forces of nature, we created 
-          Elementa Voyagés to design travel experiences that connect people to places 
+    </section>
+    <!-- Story Section: Company Background -->
+    <section aria-labelledby="story-title" class="story">
+      <div class="story-text">
+        <h2 id="story-title">Our Story</h2>
+        <p>
+          The name <strong>Elementa</strong> comes from the idea of the four elements:
+          Earth, Water, Air, and Fire. These elements shape not only our planet, but
+          also the journeys we take. Inspired by these forces of nature, we created
+          Elementa Voyagés to design travel experiences that connect people to places
           in meaningful ways.
         </p>
-<p>
-          Since our founding, we’ve partnered with luxury resorts, boutique hotels, and 
-          cultural guides across the globe. Whether it’s a desert escape, a mountain 
-          retreat, or a city adventure, we ensure each trip is seamlessly tailored to 
+        <p>
+          Since our founding, we’ve partnered with luxury resorts, boutique hotels, and
+          cultural guides across the globe. Whether it’s a desert escape, a mountain
+          retreat, or a city adventure, we ensure each trip is seamlessly tailored to
           your unique style.
         </p>
-</div>
-<!-- Image of the team -->
-<div class="story-image">
-<img alt="Our Team" src="about-image/staff.webp"/>
-</div>
-</section>
-<section aria-labelledby="values-title" class="values">
-<h2 id="values-title">What We Value</h2>
-<div class="values-grid">
-<!-- Individual Value Card: Luxury -->
-<div class="value-card">
-<img alt="Luxury" src="about-image/italy.webp"/>
-<h3>Luxury</h3>
-<p>Every detail matters. We craft experiences that feel effortless, elegant, and unforgettable.</p>
-</div>
-<!-- Individual Value Card: Authenticity -->
-<div class="value-card">
-<img alt="Authenticity" src="front-page-image/image-two.webp"/>
-<h3>Authenticity</h3>
-<p>Our trips are rooted in real culture and community, making your journey authentic and unique.</p>
-</div>
-<!-- Individual Value Card: Exploration -->
-<div class="value-card">
-<img alt="Exploration" src="about-image/switzerland.webp"/>
-<h3>Exploration</h3>
-<p>We celebrate curiosity — helping travelers step into new worlds and discover hidden gems.</p>
-</div>
-</div>
-</section>
-</main>
-<footer class="site-footer">
-<div class="footer-container">
-<!-- Column 1: Logo & About -->
-<div class="footer-column">
-<div class="footer-logo">
-<img alt="Elementa Voyagés Logo" height="height" src="Screenshot_2025-07-09_at_21.32.05-removebg-preview.webp" width="width"/>
-</div>
-<p class="footer-tagline">
+      </div>
+      <!-- Image of the team -->
+      <div class="story-image">
+        <img alt="Our Team" src="about-image/staff.webp">
+      </div>
+    </section>
+    <section aria-labelledby="values-title" class="values">
+      <h2 id="values-title">What We Value</h2>
+      <div class="values-grid">
+        <!-- Individual Value Card: Luxury -->
+        <div class="value-card">
+          <img alt="Luxury" src="about-image/italy.webp">
+          <h3>Luxury</h3>
+          <p>Every detail matters. We craft experiences that feel effortless, elegant, and unforgettable.</p>
+        </div>
+        <!-- Individual Value Card: Authenticity -->
+        <div class="value-card">
+          <img alt="Authenticity" src="front-page-image/image-two.webp">
+          <h3>Authenticity</h3>
+          <p>Our trips are rooted in real culture and community, making your journey authentic and unique.</p>
+        </div>
+        <!-- Individual Value Card: Exploration -->
+        <div class="value-card">
+          <img alt="Exploration" src="about-image/switzerland.webp">
+          <h3>Exploration</h3>
+          <p>We celebrate curiosity — helping travelers step into new worlds and discover hidden gems.</p>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer class="site-footer">
+    <div class="footer-container">
+      <!-- Column 1: Logo & About -->
+      <div class="footer-column">
+        <div class="footer-logo">
+          <img alt="Elementa Voyagés Logo" src="Screenshot_2025-07-09_at_21.32.05-removebg-preview.webp">
+        </div>
+        <p class="footer-tagline">
           Curated journeys, luxurious stays, and unforgettable experiences.
         </p>
-</div>
-<!-- Column 2: Quick Links -->
-<div aria-labelledby="footer-links-title" class="footer-column">
-<h4 id="footer-links-title">Explore</h4>
-<ul class="footer-links">
-<li><a href="index.html">Home</a></li>
-<li><a href="">About Us</a></li>
-<li><a href="test-explore.html">Destinations</a></li>
-<li><a href="mailto:info@elementavoyages.com">Contact</a></li>
-</ul>
-</div>
-<!-- Column 3: Newsletter & Social -->
-<div aria-labelledby="footer-newsletter-title" class="footer-column">
-<h4 id="footer-newsletter-title">Stay Connected</h4>
-<p>Join our newsletter for travel inspiration &amp; exclusive offers.</p>
-<form class="footer-newsletter">
-<input aria-label="Email address" placeholder="Enter your email" type="email"/>
-<button type="submit">Subscribe</button>
-</form>
-<div aria-label="Social media links" class="footer-social" role="navigation">
-<a href="https://www.instagram.com/" target="_blank">Instagram</a>
-<a href="https://facebook.com" target="_blank">Facebook</a>
-<a href="https://linkedin.com" target="_blank">LinkedIn</a>
-</div>
-</div>
-</div>
-<!-- Sponsors & Credits -->
-<div class="footer-sponsors">
-<p>Sponsored by Luxury Travels &amp; Partners</p>
-<div class="sponsor-logos">
-<img alt="Sponsor 1" src="sponsors/image-one.webp" width="64" height="33"/>
-<img alt="Sponsor 2" src="sponsors/image-two.webp" width="63" height="43"/>
-<img alt="Sponsor 3" src="sponsors/image-three.webp" width="54" height="44"/>
-<img alt="Sponsor 4" src="sponsors/image-four.webp" width="85" height="37"/>
-<img alt="Sponsor 5" src="sponsors/image-five.webp" width="82" height="48"/>
-</div>
-</div>
-<!-- Footer Bottom -->
-<div class="footer-bottom">
-<p>© 2025 Elementa Voyagés. All Rights Reserved.</p>
-</div>
-</footer>
-<!-- Decorative background shapes -->
-<div class="abstract-shape shape1"></div>
-<div class="abstract-shape shape2"></div>
-<div class="abstract-shape shape3"></div>
-<p>
-<a href="https://jigsaw.w3.org/css-validator/check/referer">
-<img alt="Valid CSS!" src="https://jigsaw.w3.org/css-validator/images/vcss-blue" style="border:0;width:88px;height:31px;"/>
-</a>
-</p>
+      </div>
+      <!-- Column 2: Quick Links -->
+      <div aria-labelledby="footer-links-title" class="footer-column">
+        <h4 id="footer-links-title">Explore</h4>
+        <ul class="footer-links">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="">About Us</a></li>
+          <li><a href="test-explore.html">Destinations</a></li>
+          <li><a href="mailto:info@elementavoyages.com">Contact</a></li>
+        </ul>
+      </div>
+      <!-- Column 3: Newsletter & Social -->
+      <div aria-labelledby="footer-newsletter-title" class="footer-column">
+        <h4 id="footer-newsletter-title">Stay Connected</h4>
+        <p>Join our newsletter for travel inspiration &amp; exclusive offers.</p>
+        <form class="footer-newsletter">
+          <input aria-label="Email address" placeholder="Enter your email" type="email">
+          <button type="submit">Subscribe</button>
+        </form>
+        <div aria-label="Social media links" class="footer-social" role="navigation">
+          <a href="https://www.instagram.com/" target="_blank">Instagram</a>
+          <a href="https://facebook.com" target="_blank">Facebook</a>
+          <a href="https://linkedin.com" target="_blank">LinkedIn</a>
+        </div>
+      </div>
+    </div>
+    <!-- Sponsors & Credits -->
+    <div class="footer-sponsors">
+      <p>Sponsored by Luxury Travels &amp; Partners</p>
+      <div class="sponsor-logos">
+        <img alt="Sponsor 1" src="sponsors/image-one.webp" width="64" height="33">
+        <img alt="Sponsor 2" src="sponsors/image-two.webp" width="63" height="43">
+        <img alt="Sponsor 3" src="sponsors/image-three.webp" width="54" height="44">
+        <img alt="Sponsor 4" src="sponsors/image-four.webp" width="85" height="37">
+        <img alt="Sponsor 5" src="sponsors/image-five.webp" width="82" height="48">
+      </div>
+    </div>
+    <!-- Footer Bottom -->
+    <div class="footer-bottom">
+      <p>© 2025 Elementa Voyagés. All Rights Reserved.</p>
+    </div>
+  </footer>
+  <!-- Decorative background shapes -->
+  <div class="abstract-shape shape1"></div>
+  <div class="abstract-shape shape2"></div>
+  <div class="abstract-shape shape3"></div>
 </body>
+
 </html>
