--- a/shanghai.html
+++ b/shanghai.html
@@ -1,125 +1,141 @@
 <!DOCTYPE html>
 
 <html lang="en">
+
 <head>
-<meta name="description" content="Experience Shanghai with Elementa Voyages: a mix of modern skyscrapers, traditional culture, and must-see attractions.">
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Shanghai Map &amp; Hotels</title>
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&amp;family=Open+Sans&amp;display=swap" rel="stylesheet"/>
-<link href="city-map.css" rel="stylesheet"/>
-<script src="https://ajax.googleapis.com/ajax/libs/@googlemaps/extended-component-library/0.6.11/index.min.js" type="module"></script>
+  <meta name="description"
+    content="Experience Shanghai with Elementa Voyages: a mix of modern skyscrapers, traditional culture, and must-see attractions.">
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <title>Shanghai Map &amp; Hotels</title>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&amp;family=Open+Sans&amp;display=swap"
+    rel="stylesheet">
+  <link href="city-map.css" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/@googlemaps/extended-component-library/0.6.11/index.min.js"
+    type="module"></script>
 </head>
+
 <body>
-<header aria-label="Site Header" class="top-header">
-<!-- Logo Container -->
-<div class="logo-container">
-<a href="index.html">
-<img alt="Logo" aria-label="Elementa Voyagés Logo" height="height" src="Screenshot_2025-07-09_at_21.32.05-removebg-preview.webp" width="width"/>
-</a>
-</div>
-<!-- Navigation Links -->
-<nav aria-label="Main navigation" class="nav-links">
-<a aria-label="Go to Home page" href="index.html">Home</a>
-<a aria-label="Go to Explore page" href="test-explore.html">Explore</a>
-<a aria-label="Send email to Elementa Voyagés" href="mailto:info@elementavoyages.com">Contact</a>
-</nav>
-</header>
-<!-- Page Title -->
-<h1 aria-label="Shanghai city map and hotel information" id="city-title">Explore Shanghai</h1>
-<!-- Main Content: Map Section -->
-<div class="main-content">
-<div class="map-section">
-<!-- Google Maps API Loader: loads the maps component -->
-<gmpx-api-loader key="AIzaSyCNGtQw7HZPR1UTtfZFG_5FOKpEzZ8wn_k" solution-channel="GMP_GE_mapsandplacesautocomplete_v2"></gmpx-api-loader>
-<!-- Google Map Centered on Shanghai -->
-<gmp-map center="31.2304,121.4737" id="map" zoom="14">
-<!-- Place Picker for Searching Cities or Addresses -->
-<div class="place-picker-container" slot="control-block-start-inline-start">
-<gmpx-place-picker placeholder="Search a city or address"></gmpx-place-picker>
-</div>
-</gmp-map>
-</div>
-<!-- Sidebar: Recommended Hotels -->
-<div class="sidebar">
-<h2>Recommended Hotels</h2>
-<div class="hotel-links">
-<!-- Individual hotel cards with images, headings, and links -->
-<a aria-label="Grand Hyatt Shanghai" class="hotel-card" href="https://www.hyatt.com/zh-CN/hotel/china/grand-hyatt-shanghai/shagh" target="_blank">
-<img alt="Grand Hyatt Shanghai" aria-label="Image of Grand Hyatt Shanghai" src="shanghai/image-one.webp"/>
-<h3>Grand Hyatt Shanghai</h3>
-</a>
-<a aria-label="Hyatt on the Bund Hotel" class="hotel-card" href="https://www.hyatt.com/grand-hyatt/zh-CN/shang-hyatt-on-the-bund-shanghai" target="_blank">
-<img alt="Hyatt on the Bund Hotel" aria-label="Image of Hyatt on the Bund Hotel" src="shanghai/image-two.webp"/>
-<h3>Hyatt on the Bund Hotel</h3>
-</a>
-<a aria-label="Mandarin Oriental Pudong" class="hotel-card" href="https://www.mandarinoriental.com/en/shanghai/pudong/offers?src=ps.brand.mopud.ggl&amp;gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20814215455&amp;gclid=Cj0KCQjwwZDFBhCpARIsAB95qO3-yKum76rDgVry1qnP2w-rB6GqEA7C32mAKiJmrC0VXEpKOooGlKYaAq0OEALw_wcB" target="_blank">
-<img alt="Mandarin Oriental Pudong" aria-label="Image of Mandarin Oriental Pudong" src="shanghai/image-three.webp"/>
-<h3>Mandarin Oriental Pudong</h3>
-</a>
-<a aria-label="Waldorf Astoria Shanghai on the Bund" class="hotel-card" href="https://waldorfastoriahotels.com.cn/zh-cn/hotel/shanghai/waldorf-astoria-shanghai-SHAWAWA/index.html" target="_blank">
-<img alt="Waldorf Astoria Shanghai on the Bund" aria-label="Image of Waldorf Astoria Shanghai on the Bund" src="shanghai/image-four.webp"/>
-<h3>Waldorf Astoria Shanghai on the Bund</h3>
-</a>
-<a aria-label="Meego Qingwen Hotel" class="hotel-card" href="https://www.hotel.com.au/shanghai/shanghai-meego-qingwen-hotel.htm" target="_blank">
-<img alt="Meego Qingwen Hotel" aria-label="Image of Meego Qingwen Hotel" src="shanghai/image-five.webp"/>
-<h3>Meego Qingwen Hotel</h3>
-</a>
-<a aria-label="Shanghai Marriott Hotel City Centre" class="hotel-card" href="https://www.marriott.com.cn/hotels/shamc-shanghai-marriott-marquis-city-centre/overview/" target="_blank">
-<img alt="Shanghai Marriott Hotel City Centre" aria-label="Image of Shanghai Marriott Hotel City Centre" src="shanghai/image-six.webp"/>
-<h3>Shanghai Marriott Hotel City Centre</h3>
-</a>
-</div>
-</div>
-</div>
-<script type="module">
-  // Initialize the map and place picker after the custom element is defined
-  async function init() {
-    await customElements.whenDefined('gmp-map')
-    ;
-    // Select the map and place picker elements
-    const map = document.querySelector('#map');// Reference to the map element
-    const placePicker = document.querySelector('gmpx-place-picker');// Reference to the search box
-    const infoWindow = new google.maps.InfoWindow();// Info window to display place details
+  <header aria-label="Site Header" class="top-header">
+    <!-- Logo Container -->
+    <div class="logo-container">
+      <a href="index.html">
+        <img alt="Logo" aria-label="Elementa Voyagés Logo"
+          src="Screenshot_2025-07-09_at_21.32.05-removebg-preview.webp">
+      </a>
+    </div>
+    <!-- Navigation Links -->
+    <nav aria-label="Main navigation" class="nav-links">
+      <a aria-label="Go to Home page" href="index.html">Home</a>
+      <a aria-label="Go to Explore page" href="test-explore.html">Explore</a>
+      <a aria-label="Send email to Elementa Voyagés" href="mailto:info@elementavoyages.com">Contact</a>
+    </nav>
+  </header>
+  <!-- Page Title -->
+  <h1 aria-label="Shanghai city map and hotel information" id="city-title">Explore Shanghai</h1>
+  <!-- Main Content: Map Section -->
+  <div class="main-content">
+    <div class="map-section">
+      <!-- Google Maps API Loader: loads the maps component -->
+      <gmpx-api-loader key="AIzaSyCNGtQw7HZPR1UTtfZFG_5FOKpEzZ8wn_k"
+        solution-channel="GMP_GE_mapsandplacesautocomplete_v2"></gmpx-api-loader>
+      <!-- Google Map Centered on Shanghai -->
+      <gmp-map center="31.2304,121.4737" id="map" zoom="14">
+        <!-- Place Picker for Searching Cities or Addresses -->
+        <div class="place-picker-container" slot="control-block-start-inline-start">
+          <gmpx-place-picker placeholder="Search a city or address"></gmpx-place-picker>
+        </div>
+      </gmp-map>
+    </div>
+    <!-- Sidebar: Recommended Hotels -->
+    <div class="sidebar">
+      <h2>Recommended Hotels</h2>
+      <div class="hotel-links">
+        <!-- Individual hotel cards with images, headings, and links -->
+        <a aria-label="Grand Hyatt Shanghai" class="hotel-card"
+          href="https://www.hyatt.com/zh-CN/hotel/china/grand-hyatt-shanghai/shagh" target="_blank">
+          <img alt="Grand Hyatt Shanghai" aria-label="Image of Grand Hyatt Shanghai" src="shanghai/image-one.webp">
+          <h3>Grand Hyatt Shanghai</h3>
+        </a>
+        <a aria-label="Hyatt on the Bund Hotel" class="hotel-card"
+          href="https://www.hyatt.com/grand-hyatt/zh-CN/shang-hyatt-on-the-bund-shanghai" target="_blank">
+          <img alt="Hyatt on the Bund Hotel" aria-label="Image of Hyatt on the Bund Hotel"
+            src="shanghai/image-two.webp">
+          <h3>Hyatt on the Bund Hotel</h3>
+        </a>
+        <a aria-label="Mandarin Oriental Pudong" class="hotel-card"
+          href="https://www.mandarinoriental.com/en/shanghai/pudong/offers?src=ps.brand.mopud.ggl&amp;gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20814215455&amp;gclid=Cj0KCQjwwZDFBhCpARIsAB95qO3-yKum76rDgVry1qnP2w-rB6GqEA7C32mAKiJmrC0VXEpKOooGlKYaAq0OEALw_wcB"
+          target="_blank">
+          <img alt="Mandarin Oriental Pudong" aria-label="Image of Mandarin Oriental Pudong"
+            src="shanghai/image-three.webp">
+          <h3>Mandarin Oriental Pudong</h3>
+        </a>
+        <a aria-label="Waldorf Astoria Shanghai on the Bund" class="hotel-card"
+          href="https://waldorfastoriahotels.com.cn/zh-cn/hotel/shanghai/waldorf-astoria-shanghai-SHAWAWA/index.html"
+          target="_blank">
+          <img alt="Waldorf Astoria Shanghai on the Bund" aria-label="Image of Waldorf Astoria Shanghai on the Bund"
+            src="shanghai/image-four.webp">
+          <h3>Waldorf Astoria Shanghai on the Bund</h3>
+        </a>
+        <a aria-label="Meego Qingwen Hotel" class="hotel-card"
+          href="https://www.hotel.com.au/shanghai/shanghai-meego-qingwen-hotel.htm" target="_blank">
+          <img alt="Meego Qingwen Hotel" aria-label="Image of Meego Qingwen Hotel" src="shanghai/image-five.webp">
+          <h3>Meego Qingwen Hotel</h3>
+        </a>
+        <a aria-label="Shanghai Marriott Hotel City Centre" class="hotel-card"
+          href="https://www.marriott.com.cn/hotels/shamc-shanghai-marriott-marquis-city-centre/overview/"
+          target="_blank">
+          <img alt="Shanghai Marriott Hotel City Centre" aria-label="Image of Shanghai Marriott Hotel City Centre"
+            src="shanghai/image-six.webp">
+          <h3>Shanghai Marriott Hotel City Centre</h3>
+        </a>
+      </div>
+    </div>
+  </div>
+  <script type="module">
+    // Initialize the map and place picker after the custom element is defined
+    async function init() {
+      await customElements.whenDefined('gmp-map')
+        ;
+      // Select the map and place picker elements
+      const map = document.querySelector('#map');// Reference to the map element
+      const placePicker = document.querySelector('gmpx-place-picker');// Reference to the search box
+      const infoWindow = new google.maps.InfoWindow();// Info window to display place details
 
-    // Listen for place selection changes from the place picker
-    placePicker.addEventListener('gmpx-placechange', () => {
-      const place = placePicker.value;
+      // Listen for place selection changes from the place picker
+      placePicker.addEventListener('gmpx-placechange', () => {
+        const place = placePicker.value;
 
-      // Alert if no location data is available
-      if (!place.location) {
-        window.alert("No details available for input: '" + place.name + "'");
-        return;
-      }
+        // Alert if no location data is available
+        if (!place.location) {
+          window.alert("No details available for input: '" + place.name + "'");
+          return;
+        }
 
-      // Adjust map view to place viewport or center/zoom if viewport not provided
-      if (place.viewport) {
-        map.innerMap.fitBounds(place.viewport);
-      } else {
-        map.center = place.location; // Center map to location
-        map.zoom = 14;
-      }
+        // Adjust map view to place viewport or center/zoom if viewport not provided
+        if (place.viewport) {
+          map.innerMap.fitBounds(place.viewport);
+        } else {
+          map.center = place.location; // Center map to location
+          map.zoom = 14;
+        }
 
-      // Add marker for selected place on the map
-      const searchMarker = new google.maps.Marker({
-        position: place.location,
-        map: map.innerMap,
-        title: place.displayName // ARIA-friendly marker title
+        // Add marker for selected place on the map
+        const searchMarker = new google.maps.Marker({
+          position: place.location,
+          map: map.innerMap,
+          title: place.displayName // ARIA-friendly marker title
+        });
+
+        // Display info window with place name and formatted address
+        infoWindow.setContent(`<strong>${place.displayName}</strong><br>${place.formattedAddress || ""}`);
+        infoWindow.open(map.innerMap, searchMarker);
       });
+    }
 
-      // Display info window with place name and formatted address
-      infoWindow.setContent(`<strong>${place.displayName}</strong><br>${place.formattedAddress || ""}`);
-      infoWindow.open(map.innerMap, searchMarker);
-    });
-  }
-
-  // Run init function once DOM is fully loaded
-  document.addEventListener('DOMContentLoaded', init);
-</script>
-<p>
-<a href="https://jigsaw.w3.org/css-validator/check/referer">
-<img alt="Valid CSS!" src="https://jigsaw.w3.org/css-validator/images/vcss-blue" style="border:0;width:88px;height:31px"/>
-</a>
-</p>
+    // Run init function once DOM is fully loaded
+    document.addEventListener('DOMContentLoaded', init);
+  </script>
 </body>
+
 </html>
